# CUDA12-HOG

./: CMakeLists.txt  README.md  c_hog_features.h  cuda_hog.cuh  cuda_main.cu  group.cu  hog_visualize.cpp  hog_visualize.h  main.cpp  opencvtest.cpp  opencvtest.sln  opencvtest.vcxproj  opencvtest.vcxproj.filters  sample.cpp
